admin-backend/src/main/java/com/example/backend/common/error/ICommonError.java
package com.example.backend.common.error;

public interface ICommonError {
    int getErrCode();

    String getErrMsg();

    ICommonError setErrMsg(String errMsg);
}
